[gd_scene load_steps=21 format=3 uid="uid://yp5j6n6nibaa"]

[ext_resource type="Texture2D" uid="uid://cqn5raanldcaf" path="res://resources/textures/processes/panfiring.png" id="1_2wxx0"]
[ext_resource type="Script" path="res://scripts/processing_room.gd" id="1_wkim7"]
[ext_resource type="Texture2D" uid="uid://ck8y684x566km" path="res://resources/textures/processes/steaming.png" id="2_pfx8k"]
[ext_resource type="Texture2D" uid="uid://cww4kqynl51pr" path="res://resources/textures/processes/oxidizing.png" id="3_ra4ei"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p1tpe"]
bg_color = Color(0.027451, 0.0313726, 0.0588235, 0.0823529)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_opdfr"]
bg_color = Color(0.0509804, 0.054902, 0.0901961, 0.466667)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="Theme" id="Theme_14ofv"]
Button/font_sizes/font_size = 61
Button/styles/disabled = SubResource("StyleBoxFlat_p1tpe")
Button/styles/focus = SubResource("StyleBoxFlat_opdfr")
Button/styles/hover = SubResource("StyleBoxFlat_opdfr")
Button/styles/normal = SubResource("StyleBoxFlat_opdfr")
Button/styles/pressed = SubResource("StyleBoxFlat_opdfr")

[sub_resource type="Theme" id="Theme_oh0t8"]
LineEdit/font_sizes/font_size = 28

[sub_resource type="AtlasTexture" id="AtlasTexture_r0cuv"]
atlas = ExtResource("1_2wxx0")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_le6ki"]
atlas = ExtResource("1_2wxx0")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rniyv"]
atlas = ExtResource("1_2wxx0")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_k68oc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0cuv")
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_le6ki")
}],
"loop": true,
"name": &"loaded",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rniyv")
}],
"loop": true,
"name": &"processed",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_yat7v"]
atlas = ExtResource("2_pfx8k")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0m2v"]
atlas = ExtResource("2_pfx8k")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dxxa"]
atlas = ExtResource("2_pfx8k")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_kodtk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yat7v")
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0m2v")
}],
"loop": true,
"name": &"loaded",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dxxa")
}],
"loop": true,
"name": &"processed",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_j1c55"]
atlas = ExtResource("3_ra4ei")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubeox"]
atlas = ExtResource("3_ra4ei")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0k05d"]
atlas = ExtResource("3_ra4ei")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_4a0hy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1c55")
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubeox")
}],
"loop": true,
"name": &"loaded",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0k05d")
}],
"loop": true,
"name": &"processed",
"speed": 5.0
}]

[node name="ProcessingRoom" type="Node2D"]
script = ExtResource("1_wkim7")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme = SubResource("Theme_14ofv")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.34902, 0.490196, 0.207843, 1)

[node name="SelectionMenu" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -676.0
offset_top = -13.0
offset_right = 677.0
offset_bottom = 278.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/SelectionMenu"]
layout_mode = 2

[node name="PreviousProcess" type="Button" parent="Control/SelectionMenu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Previous Process"

[node name="Label" type="Label" parent="Control/SelectionMenu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 91
text = "Roasting"
horizontal_alignment = 1

[node name="NextProcess" type="Button" parent="Control/SelectionMenu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Next Process"

[node name="MarginContainer" type="MarginContainer" parent="Control/SelectionMenu"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/SelectionMenu"]
layout_mode = 2

[node name="LoadAmount" type="SpinBox" parent="Control/SelectionMenu/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_oh0t8")
min_value = 1.0
max_value = 5.0
value = 1.0
alignment = 1
prefix = "Number of leaves:"

[node name="MarginContainer2" type="MarginContainer" parent="Control/SelectionMenu/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.02

[node name="LoadTea" type="Button" parent="Control/SelectionMenu/HBoxContainer2"]
layout_mode = 2
text = "Load Tea"

[node name="MarginContainer" type="MarginContainer" parent="Control/SelectionMenu/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ProcessingMenu" type="HBoxContainer" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.605
anchor_right = 0.5
anchor_bottom = 0.605
offset_left = -96.0
offset_top = -96.0
offset_right = 96.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/ProcessingMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 61
text = "The tea is being processed.
Come back in 3 days"

[node name="Roasting" type="AnimatedSprite2D" parent="."]
position = Vector2(960, 300)
scale = Vector2(9, 9)
sprite_frames = SubResource("SpriteFrames_k68oc")
animation = &"empty"
autoplay = "empty"

[node name="Steaming" type="AnimatedSprite2D" parent="."]
position = Vector2(-280, 300)
scale = Vector2(9, 9)
sprite_frames = SubResource("SpriteFrames_kodtk")
animation = &"empty"
autoplay = "empty"

[node name="Oxidizing" type="AnimatedSprite2D" parent="."]
position = Vector2(2200, 297)
scale = Vector2(9, 9)
sprite_frames = SubResource("SpriteFrames_4a0hy")
animation = &"empty"
autoplay = "empty"

[connection signal="button_up" from="Control/SelectionMenu/HBoxContainer/PreviousProcess" to="." method="_on_previous_process_button_up"]
[connection signal="button_up" from="Control/SelectionMenu/HBoxContainer/NextProcess" to="." method="_on_next_process_button_up"]
[connection signal="button_up" from="Control/SelectionMenu/HBoxContainer2/LoadTea" to="." method="_on_load_tea_button_up"]
